chgmgmt_build/src/objects/Application__c.object
<CustomObject>
    <fields>
        <fullName>ApplicantFirstName__c</fullName>
        <label>応募者（名）</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApplicantLastName__c</fullName>
        <label>応募者（姓）</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApplicantMail__c</fullName>
        <label>応募者メールアドレス</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>DocumentScreening__c</fullName>
        <label>書類選考</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>OK</fullName>
                </value>
                <value>
                    <fullName>NG</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Emp_intro_no__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>紹介社員　従業員番号</label>
        <referenceTo>Employee__c</referenceTo>
        <relationshipLabel>応募</relationshipLabel>
        <relationshipName>app_to_employee</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Field10__c</fullName>
        <label>面接候補日（第三希望）</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Field11__c</fullName>
        <label>面接日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Field12__c</fullName>
        <label>連絡事項</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>JobOffer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>募集</label>
        <referenceTo>JobOffer__c</referenceTo>
        <relationshipLabel>応募</relationshipLabel>
        <relationshipName>JobOffer</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Note__c</fullName>
        <label>備考</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RecruitmentAgencyContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>採用エージェンシー担当者</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>応募</relationshipLabel>
        <relationshipName>Application</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RecruitmentAgency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>採用エージェンシー</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>応募</relationshipLabel>
        <relationshipName>Application</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WighReason__c</fullName>
        <label>応募理由</label>
        <type>TextArea</type>
    </fields>
    <label>応募</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Field1__c</columns>
        <columns>NAME</columns>
        <columns>WighReason__c</columns>
        <columns>Field2__c</columns>
        <filterScope>Everything</filterScope>
        <label>0.All</label>
        <language>ja</language>
    </listViews>
    <listViews>
        <fullName>Document</fullName>
        <columns>Field1__c</columns>
        <columns>NAME</columns>
        <columns>JobOffer__c</columns>
        <columns>WighReason__c</columns>
        <columns>Field2__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Field1__c</field>
            <operation>equals</operation>
            <value>書類選考</value>
        </filters>
        <label>1.Document Screening</label>
        <language>ja</language>
    </listViews>
    <listViews>
        <fullName>Final_Interview</fullName>
        <columns>Field1__c</columns>
        <columns>NAME</columns>
        <columns>JobOffer__c</columns>
        <columns>WighReason__c</columns>
        <columns>Field2__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Field1__c</field>
            <operation>equals</operation>
            <value>最終面接</value>
        </filters>
        <label>4.Final Interview</label>
        <language>ja</language>
    </listViews>
    <listViews>
        <fullName>First_Interview</fullName>
        <columns>Field1__c</columns>
        <columns>NAME</columns>
        <columns>JobOffer__c</columns>
        <columns>WighReason__c</columns>
        <columns>Field2__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Field1__c</field>
            <operation>equals</operation>
            <value>一次面接</value>
        </filters>
        <label>2.First Interview</label>
        <language>ja</language>
    </listViews>
    <listViews>
        <fullName>Secondary_Interview</fullName>
        <columns>Field1__c</columns>
        <columns>NAME</columns>
        <columns>JobOffer__c</columns>
        <columns>WighReason__c</columns>
        <columns>Field2__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Field1__c</field>
            <operation>equals</operation>
            <value>二次面接</value>
        </filters>
        <label>3.Secondary Interview</label>
        <language>ja</language>
    </listViews>
    <nameField>
        <displayFormat>AP-{00000000}</displayFormat>
        <label>応募番号</label>
        <type>AutoNumber</type>
    </nameField>
    <recordTypes>
        <fullName>Agency</fullName>
        <active>true</active>
        <label>採用エージェンシー</label>
    </recordTypes>
    <recordTypes>
        <fullName>Emp_Referral</fullName>
        <active>true</active>
        <label>社員紹介</label>
    </recordTypes>
    <recordTypes>
        <fullName>Internal_application</fullName>
        <active>true</active>
        <label>社内公募</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>